src/main/java/com/example/jokerexamples/vertical/bad/slack/SlackFormatMessagingService.java
package com.example.jokerexamples.vertical.bad.slack;

public class SlackFormatMessagingService {
}
